--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMD1eKUo46eO0zasTdhBQeD",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN6KMI7CdQwWq44ScNgQrNU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UHpHkJ2s5agi",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Environment**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "r_GMziS75AZM",
@@ -32,7 +43,117 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import copy\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sb\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.colors import ListedColormap\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.model_selection import train_test_split, KFold\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import GridSearchCV"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ywWiUdDj5zPK",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Function&Class Definitions**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KC07KRv759Ry",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def splitData(dataset, testSize, ):\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSize)\n",
+        "    \n",
+        "  scaler = StandardScaler()\n",
+        "  X_train = scaler.fit_transform(X_train)\n",
+        "  X_test = scaler.transform(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w9YAmh7P6EyV",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Data Importation&Visualization**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9yBdhGhI6O0X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Dataset Importation\n",
+        "pulsarCandidates = pd.read_csv('pulsar_stars.csv')\n",
+        "\n",
+        "pulsarCandidates.info()\n",
+        "datasetStats = pulsarCandidates.describe()\n",
+        "\n",
+        "# Correlation Matrix Heatmap\n",
+        "_, ax = plt.subplots(figsize = (10,10))\n",
+        "hm = sb.heatmap(pulsarCandidates.corr(), annot = True, linewidths=.5, fmt = \".3f\", ax=ax)\n",
+        "bottom, top = hm.get_ylim()\n",
+        "hm.set_ylim(bottom + 0.5, top - 0.5)\n",
+        "plt.show()\n",
+        "\n",
+        "# Pair Plot\n",
+        "g = sb.pairplot(pulsarCandidates)\n",
+        "\n",
+        "# Bar Plot\n",
+        "_, ax1 = plt.subplots(3,3, figsize=(15,10))\n",
+        "k = 0\n",
+        "for i in range(3):\n",
+        "    for j in range(3):\n",
+        "        if k != 10:\n",
+        "            sb.barplot(x='target_class', y=pulsarCandidates.iloc[:,k], data=pulsarCandidates, ax = ax1[i][j])\n",
+        "            k += 1            \n",
+        "plt.show()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LhVOzurJ7Hib",
+        "colab_type": "text"
+      },
+      "source": [
+        "**bold text**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SoSYGdl37N42",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X = pulsarCandidates.iloc[:,:7].values\n",
+        "y = pulsarCandidates.iloc[:,8:].values"
       ],
       "execution_count": 0,
       "outputs": []
