--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6KMI7CdQwWq44ScNgQrNU",
+      "authorship_tag": "ABX9TyNUwAaaADY5UcuuGkfGpNRq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,12 +77,39 @@
         "colab": {}
       },
       "source": [
-        "def splitData(dataset, testSize, ):\n",
-        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSize)\n",
+        "def splitDataset(dataset, testSizeRatio):\n",
+        "  X = dataset.data\n",
+        "  y = dataset.target\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio)\n",
         "    \n",
         "  scaler = StandardScaler()\n",
         "  X_train = scaler.fit_transform(X_train)\n",
-        "  X_test = scaler.transform(X_test)"
+        "  X_test = scaler.transform(X_test)\n",
+        "\n",
+        "  return X_train, X_test, y_train, y_test"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XhHLuDFgCNWE",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Data Importation**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tTIKNq5GCRXx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pulsarCandidates = pd.read_csv('pulsar_stars.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -94,7 +121,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Data Importation&Visualization**"
+        "**Data Visualization**"
       ]
     },
     {
@@ -105,9 +132,6 @@
         "colab": {}
       },
       "source": [
-        "# Dataset Importation\n",
-        "pulsarCandidates = pd.read_csv('pulsar_stars.csv')\n",
-        "\n",
         "pulsarCandidates.info()\n",
         "datasetStats = pulsarCandidates.describe()\n",
         "\n",
