--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUwAaaADY5UcuuGkfGpNRq",
+      "authorship_tag": "ABX9TyOhUoN8gJWOSLs1rexbeKjm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,8 +78,9 @@
       },
       "source": [
         "def splitDataset(dataset, testSizeRatio):\n",
-        "  X = dataset.data\n",
-        "  y = dataset.target\n",
+        "  X = dataset.iloc[:, :7].values\n",
+        "  y = dataset.iloc[:, 8].values\n",
+        "  \n",
         "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio)\n",
         "    \n",
         "  scaler = StandardScaler()\n",
@@ -109,7 +110,7 @@
         "colab": {}
       },
       "source": [
-        "pulsarCandidates = pd.read_csv('pulsar_stars.csv')"
+        "pulsarData = pd.read_csv('https://raw.githubusercontent.com/bahadirbasaran/pulsarDetection/master/pulsar_stars.csv?token=ALRHARXNN6L47R4KLJOGKP26LQWMU')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -132,18 +133,18 @@
         "colab": {}
       },
       "source": [
-        "pulsarCandidates.info()\n",
-        "datasetStats = pulsarCandidates.describe()\n",
+        "pulsarData.info()\n",
+        "datasetStats = pulsarData.describe()\n",
         "\n",
         "# Correlation Matrix Heatmap\n",
         "_, ax = plt.subplots(figsize = (10,10))\n",
-        "hm = sb.heatmap(pulsarCandidates.corr(), annot = True, linewidths=.5, fmt = \".3f\", ax=ax)\n",
+        "hm = sb.heatmap(pulsarData.corr(), annot = True, linewidths=.5, fmt = \".3f\", ax=ax)\n",
         "bottom, top = hm.get_ylim()\n",
         "hm.set_ylim(bottom + 0.5, top - 0.5)\n",
         "plt.show()\n",
         "\n",
         "# Pair Plot\n",
-        "g = sb.pairplot(pulsarCandidates)\n",
+        "g = sb.pairplot(pulsarData)\n",
         "\n",
         "# Bar Plot\n",
         "_, ax1 = plt.subplots(3,3, figsize=(15,10))\n",
@@ -151,7 +152,7 @@
         "for i in range(3):\n",
         "    for j in range(3):\n",
         "        if k != 10:\n",
-        "            sb.barplot(x='target_class', y=pulsarCandidates.iloc[:,k], data=pulsarCandidates, ax = ax1[i][j])\n",
+        "            sb.barplot(x='target_class', y=pulsarData.iloc[:,k], data=pulsarData, ax = ax1[i][j])\n",
         "            k += 1            \n",
         "plt.show()\n"
       ],
@@ -176,8 +177,10 @@
         "colab": {}
       },
       "source": [
-        "X = pulsarCandidates.iloc[:,:7].values\n",
-        "y = pulsarCandidates.iloc[:,8:].values"
+        "X_train, X_test, y_train, y_test = splitDataset(pulsarData, 0.3)\n",
+        "\n",
+        "#X = pulsarData.iloc[:,:7].values\n",
+        "#y = pulsarData.iloc[:,8:].values"
       ],
       "execution_count": 0,
       "outputs": []
