--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOhUoN8gJWOSLs1rexbeKjm",
+      "authorship_tag": "ABX9TyOUQ8EzgDmZWSXKi8W0Ly2q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,17 +77,18 @@
         "colab": {}
       },
       "source": [
-        "def splitDataset(dataset, testSizeRatio):\n",
-        "  X = dataset.iloc[:, :7].values\n",
-        "  y = dataset.iloc[:, 8].values\n",
-        "  \n",
-        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio)\n",
+        "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio):\n",
         "    \n",
-        "  scaler = StandardScaler()\n",
-        "  X_train = scaler.fit_transform(X_train)\n",
-        "  X_test = scaler.transform(X_test)\n",
+        "    X = dataset[dataset.columns[list_dataColumns]]\n",
+        "    y = dataset[dataset.columns[targetColumn]]\n",
+        "    \n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, stratify=y, random_state=42)\n",
+        "    \n",
+        "    scaler = StandardScaler()\n",
+        "    X_train = scaler.fit_transform(X_train)\n",
+        "    X_test = scaler.transform(X_test)\n",
         "\n",
-        "  return X_train, X_test, y_train, y_test"
+        "    return X_train, X_test, y_train, y_test"
       ],
       "execution_count": 0,
       "outputs": []
@@ -177,10 +178,7 @@
         "colab": {}
       },
       "source": [
-        "X_train, X_test, y_train, y_test = splitDataset(pulsarData, 0.3)\n",
-        "\n",
-        "#X = pulsarData.iloc[:,:7].values\n",
-        "#y = pulsarData.iloc[:,8:].values"
+        "X_train, X_test, y_train, y_test = createDataSplits(pulsarData, [0,1,2,3,4,5,6,7], 8, 0.3)\n"
       ],
       "execution_count": 0,
       "outputs": []
