--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOUQ8EzgDmZWSXKi8W0Ly2q",
+      "authorship_tag": "ABX9TyO9FWzJ5Wab1lybxeyc7rFY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "    X = dataset[dataset.columns[list_dataColumns]]\n",
         "    y = dataset[dataset.columns[targetColumn]]\n",
         "    \n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, stratify=y, random_state=42)\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, random_state=42)\n",
         "    \n",
         "    scaler = StandardScaler()\n",
         "    X_train = scaler.fit_transform(X_train)\n",
@@ -145,15 +145,27 @@
         "plt.show()\n",
         "\n",
         "# Pair Plot\n",
-        "g = sb.pairplot(pulsarData)\n",
+        "sb.pairplot(data=pulsarData,\n",
+        "             palette=\"husl\",\n",
+        "             hue=\"target_class\",\n",
+        "             vars=list(pulsarData.columns))\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Violin Plot\n",
+        "plt.figure(figsize=(17,15))\n",
+        "for i in range(8):\n",
+        "    plt.subplot(4,4,i+1)\n",
+        "    sb.violinplot(data=pulsarData, y=pulsarData.columns[i], x=\"target_class\")\n",
+        "plt.show()\n",
         "\n",
         "# Bar Plot\n",
         "_, ax1 = plt.subplots(3,3, figsize=(15,10))\n",
         "k = 0\n",
         "for i in range(3):\n",
         "    for j in range(3):\n",
-        "        if k != 10:\n",
-        "            sb.barplot(x='target_class', y=pulsarData.iloc[:,k], data=pulsarData, ax = ax1[i][j])\n",
+        "        if k != 8:\n",
+        "            sb.barplot(x='target_class', y=pulsarData.columns[k], data=pulsarData, ax = ax1[i][j])\n",
         "            k += 1            \n",
         "plt.show()\n"
       ],
