--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9FWzJ5Wab1lybxeyc7rFY",
+      "authorship_tag": "ABX9TyNdtG1g+iuaMyQ86x6g31IW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,16 +77,27 @@
         "colab": {}
       },
       "source": [
-        "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio):\n",
+        "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):\n",
         "    \n",
         "    X = dataset[dataset.columns[list_dataColumns]]\n",
         "    y = dataset[dataset.columns[targetColumn]]\n",
         "    \n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, random_state=42)\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, random_state=randomState)\n",
         "    \n",
-        "    scaler = StandardScaler()\n",
-        "    X_train = scaler.fit_transform(X_train)\n",
-        "    X_test = scaler.transform(X_test)\n",
+        "    if normalize == True:\n",
+        "        scaler = StandardScaler()\n",
+        "        X_train = scaler.fit_transform(X_train)\n",
+        "        X_test = scaler.transform(X_test)\n",
+        "        \n",
+        "    #Index of X_train and X_test are changed. We must reset the index of y_train and y_test.Otherwise, index mismatch error.\n",
+        "    y_train = y_train.reset_index(drop=True)\n",
+        "    y_test = y_test.reset_index(drop=True)\n",
+        "\n",
+        "    #Oversampling to balance the data set        \n",
+        "    if oversample == True:\n",
+        "        sm = SMOTE(sampling_strategy='minority', random_state=randomState)\n",
+        "        X_train, y_train = sm.fit_sample(X_train, y_train)   \n",
+        "        plot_2d_space(X_train, y_train, label='Dataset After Oversampling')  \n",
         "\n",
         "    return X_train, X_test, y_train, y_test"
       ],
