--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdtG1g+iuaMyQ86x6g31IW",
+      "authorship_tag": "ABX9TyOAIgW4trYJTpBjUdztUQNs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,7 +178,10 @@
         "        if k != 8:\n",
         "            sb.barplot(x='target_class', y=pulsarData.columns[k], data=pulsarData, ax = ax1[i][j])\n",
         "            k += 1            \n",
-        "plt.show()\n"
+        "plt.show()\n",
+        "\n",
+        "# Joint Plot\n",
+        "sb.jointplot(x=pulsarData.columns[0], y=pulsarData.columns[1], data=pulsarData, kind='kde', height=12)\n"
       ],
       "execution_count": 0,
       "outputs": []
