--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAIgW4trYJTpBjUdztUQNs",
+      "authorship_tag": "ABX9TyPIaLh/QuDVHMCSmQYJDHTd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,11 +50,11 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.colors import ListedColormap\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split, KFold\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.model_selection import GridSearchCV"
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report"
       ],
       "execution_count": 0,
       "outputs": []
@@ -77,29 +77,97 @@
         "colab": {}
       },
       "source": [
-        "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):\n",
+        "def plot_2d_space(X, y, label='Classes', saveName=None):   \n",
+        "  colors = ['#1F77B4', '#FF7F0E']\n",
+        "  markers = ['o', 's']\n",
+        "  for l, c, m in zip(np.unique(y), colors, markers):\n",
+        "    plt.scatter(X[y==l, 0], X[y==l, 1], c=c, label=l, marker=m)\n",
+        "  plt.title(label)\n",
+        "  plt.legend(loc='upper right')\n",
+        "  if saveName is None:\n",
+        "    plt.show()\n",
+        "  else:\n",
+        "    plt.savefig(saveName)\n",
+        "\n",
+        "def plot_roc_curve(fpr, tpr, auc_score, saveName=None):\n",
+        "  plt.plot(fpr, tpr, color='orange', label=('AUC Score: ',auc_score))\n",
+        "  plt.plot([0, 1], [0, 1], color='darkblue', linestyle='--')\n",
+        "  plt.xlabel('False Positive Rate')\n",
+        "  plt.ylabel('True Positive Rate')\n",
+        "  plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
+        "  plt.legend(loc='best')\n",
+        "  if saveName is None:\n",
+        "    plt.show()\n",
+        "  else:\n",
+        "    plt.savefig(saveName)\n",
+        "\n",
+        "def evaluateClassifier(model, y_true, y_pred, probabilities):  \n",
+        "  score_acc = accuracy_score(y_true,y_pred)\n",
+        "  print(\"\\nAccuracy Score of {}: {}\".format(model, score_acc))\n",
+        "\n",
+        "  classificationReport = classification_report(y_true,y_pred)\n",
+        "  print(\"\\nClassification Report of {}: {}\".format(model, classificationReport))\n",
+        "\n",
+        "  score_cohenKappa = cohen_kappa_score(y_true, y_pred)\n",
+        "  print(\"\\nCohen Kappa Score of {}: {}\".format(model, score_cohenKappa))\n",
+        "\n",
+        "  score_mse = mean_squared_error(y_true, y_pred)\n",
+        "  print(\"\\nMean Squared Error Score of {}: {}\".format(model, score_mse))\n",
+        "\n",
+        "  plt.figure(figsize=(13,10))\n",
+        "  plt.subplot(221)\n",
+        "  sb.heatmap(confusion_matrix(y_true,y_pred),annot=True,fmt = \"d\",linecolor=\"k\",linewidths=3)\n",
+        "  plt.title(\"Confusion Matrix of {}\".format(model),fontsize=20)\n",
+        "\n",
+        "  false_positive_rate, true_positive_rate, thresholds = roc_curve(y_true, probabilities)\n",
+        "  plt.subplot(222)\n",
+        "  plot_roc_curve(false_positive_rate, true_positive_rate, roc_auc_score(y_true, probabilities))\n",
+        "\n",
+        "\n",
+        "\n",
+        "def executeClassifier(classifier, xTrain, yTrain, xTest, yTest, n_fold, paramSet):\n",
+        "  gs = GridSearchCV(\n",
+        "                    estimator = classifier,\n",
+        "                    param_grid = paramSet,\n",
+        "                    cv = n_fold,      \n",
+        "                    n_jobs = -1\n",
+        "                   ) \n",
+        "  gs.fit(xTrain, yTrain)\n",
+        "\n",
+        "  print(\"\\n{} Best Score: {}\".format(classifier, gs.best_score_))\n",
+        "  print(\"\\n{} Best Parameters Set:\\n\".format(classifier))\n",
+        "  for param in sorted(paramSet.keys()):\n",
+        "    print(\"Parameter {}: {}\".format(param, gs.best_estimator_.get_params()[param]))\n",
+        "\n",
+        "  y_pred = gs.predict(xTest)\n",
+        "\n",
+        "  #Predict probabilities for the test data and Keep Probabilities of the positive class only.\n",
+        "  probs = gs.predict_proba(xTest)[:, 1]\n",
+        "\n",
+        "  evaluateClassifier(classifier, yTest, y_pred, probs)\n",
+        "\n",
+        "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
+        "  X = dataset[dataset.columns[list_dataColumns]]\n",
+        "  y = dataset[dataset.columns[targetColumn]]\n",
         "    \n",
-        "    X = dataset[dataset.columns[list_dataColumns]]\n",
-        "    y = dataset[dataset.columns[targetColumn]]\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, random_state=randomState)\n",
         "    \n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = testSizeRatio, random_state=randomState)\n",
-        "    \n",
-        "    if normalize == True:\n",
-        "        scaler = StandardScaler()\n",
-        "        X_train = scaler.fit_transform(X_train)\n",
-        "        X_test = scaler.transform(X_test)\n",
+        "  if normalize == True:\n",
+        "    scaler = StandardScaler()\n",
+        "    X_train = scaler.fit_transform(X_train)\n",
+        "    X_test = scaler.transform(X_test)\n",
         "        \n",
-        "    #Index of X_train and X_test are changed. We must reset the index of y_train and y_test.Otherwise, index mismatch error.\n",
-        "    y_train = y_train.reset_index(drop=True)\n",
-        "    y_test = y_test.reset_index(drop=True)\n",
+        "  #Index of X_train and X_test are changed. We must reset the index of y_train and y_test.Otherwise, index mismatch error.\n",
+        "  y_train = y_train.reset_index(drop=True)\n",
+        "  y_test = y_test.reset_index(drop=True)\n",
         "\n",
-        "    #Oversampling to balance the data set        \n",
-        "    if oversample == True:\n",
-        "        sm = SMOTE(sampling_strategy='minority', random_state=randomState)\n",
-        "        X_train, y_train = sm.fit_sample(X_train, y_train)   \n",
-        "        plot_2d_space(X_train, y_train, label='Dataset After Oversampling')  \n",
+        "  #Oversampling to balance the data set        \n",
+        "  if oversample == True:\n",
+        "    sm = SMOTE(sampling_strategy='minority', random_state=randomState)\n",
+        "    X_train, y_train = sm.fit_sample(X_train, y_train)   \n",
+        "    plot_2d_space(X_train, y_train, label='Dataset After Oversampling')  \n",
         "\n",
-        "    return X_train, X_test, y_train, y_test"
+        "  return X_train, X_test, y_train, y_test"
       ],
       "execution_count": 0,
       "outputs": []
