--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPIaLh/QuDVHMCSmQYJDHTd",
+      "authorship_tag": "ABX9TyPqYwIMIICpeB5D5y/F1EiI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
         "  else:\n",
         "    plt.savefig(saveName)\n",
         "\n",
-        "def evaluateClassifier(model, y_true, y_pred, probabilities):  \n",
+        "def evaluateClassifier(model, y_true, y_pred, probabilities, feature_importances):  \n",
         "  score_acc = accuracy_score(y_true,y_pred)\n",
         "  print(\"\\nAccuracy Score of {}: {}\".format(model, score_acc))\n",
         "\n",
@@ -118,12 +118,17 @@
         "  plt.subplot(221)\n",
         "  sb.heatmap(confusion_matrix(y_true,y_pred),annot=True,fmt = \"d\",linecolor=\"k\",linewidths=3)\n",
         "  plt.title(\"Confusion Matrix of {}\".format(model),fontsize=20)\n",
+        "  plt.show()\n",
         "\n",
         "  false_positive_rate, true_positive_rate, thresholds = roc_curve(y_true, probabilities)\n",
         "  plt.subplot(222)\n",
         "  plot_roc_curve(false_positive_rate, true_positive_rate, roc_auc_score(y_true, probabilities))\n",
         "\n",
-        "\n",
+        "  plt.subplot(223)\n",
+        "  sb.barplot(x=feature_importances, y=feature_importances.index)\n",
+        "  plt.title('Feature importances')\n",
+        "  plt.xlabel('Score')\n",
+        "  plt.show()\n",
         "\n",
         "def executeClassifier(classifier, xTrain, yTrain, xTest, yTest, n_fold, paramSet):\n",
         "  gs = GridSearchCV(\n",
@@ -144,7 +149,9 @@
         "  #Predict probabilities for the test data and Keep Probabilities of the positive class only.\n",
         "  probs = gs.predict_proba(xTest)[:, 1]\n",
         "\n",
-        "  evaluateClassifier(classifier, yTest, y_pred, probs)\n",
+        "  featureImportances = pd.Series(gs.feature_importances_, index=dataset.columns[:-1]).sort_values(ascending=False)\n",
+        "\n",
+        "  evaluateClassifier(classifier, yTest, y_pred, probs, featureImportances)\n",
         "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
         "  X = dataset[dataset.columns[list_dataColumns]]\n",
@@ -190,7 +197,7 @@
         "colab": {}
       },
       "source": [
-        "pulsarData = pd.read_csv('https://raw.githubusercontent.com/bahadirbasaran/pulsarDetection/master/pulsar_stars.csv?token=ALRHARXNN6L47R4KLJOGKP26LQWMU')"
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/bahadirbasaran/pulsarDetection/master/pulsar_stars.csv?token=ALRHARXNN6L47R4KLJOGKP26LQWMU')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -213,21 +220,21 @@
         "colab": {}
       },
       "source": [
-        "pulsarData.info()\n",
-        "datasetStats = pulsarData.describe()\n",
+        "dataset.info()\n",
+        "datasetStats = dataset.describe()\n",
         "\n",
         "# Correlation Matrix Heatmap\n",
         "_, ax = plt.subplots(figsize = (10,10))\n",
-        "hm = sb.heatmap(pulsarData.corr(), annot = True, linewidths=.5, fmt = \".3f\", ax=ax)\n",
+        "hm = sb.heatmap(dataset.corr(), annot = True, linewidths=.5, fmt = \".3f\", ax=ax)\n",
         "bottom, top = hm.get_ylim()\n",
         "hm.set_ylim(bottom + 0.5, top - 0.5)\n",
         "plt.show()\n",
         "\n",
         "# Pair Plot\n",
-        "sb.pairplot(data=pulsarData,\n",
+        "sb.pairplot(data=dataset,\n",
         "             palette=\"husl\",\n",
         "             hue=\"target_class\",\n",
-        "             vars=list(pulsarData.columns))\n",
+        "             vars=list(dataset.columns))\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
@@ -235,7 +242,7 @@
         "plt.figure(figsize=(17,15))\n",
         "for i in range(8):\n",
         "    plt.subplot(4,4,i+1)\n",
-        "    sb.violinplot(data=pulsarData, y=pulsarData.columns[i], x=\"target_class\")\n",
+        "    sb.violinplot(data=dataset, y=dataset.columns[i], x=\"target_class\")\n",
         "plt.show()\n",
         "\n",
         "# Bar Plot\n",
@@ -244,12 +251,12 @@
         "for i in range(3):\n",
         "    for j in range(3):\n",
         "        if k != 8:\n",
-        "            sb.barplot(x='target_class', y=pulsarData.columns[k], data=pulsarData, ax = ax1[i][j])\n",
+        "            sb.barplot(x='target_class', y=dataset.columns[k], data=dataset, ax = ax1[i][j])\n",
         "            k += 1            \n",
         "plt.show()\n",
         "\n",
         "# Joint Plot\n",
-        "sb.jointplot(x=pulsarData.columns[0], y=pulsarData.columns[1], data=pulsarData, kind='kde', height=12)\n"
+        "sb.jointplot(x=dataset.columns[0], y=dataset.columns[1], data=dataset, kind='kde', height=12)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -272,7 +279,7 @@
         "colab": {}
       },
       "source": [
-        "X_train, X_test, y_train, y_test = createDataSplits(pulsarData, [0,1,2,3,4,5,6,7], 8, 0.3)\n"
+        "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.3)\n"
       ],
       "execution_count": 0,
       "outputs": []
