--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPqYwIMIICpeB5D5y/F1EiI",
+      "authorship_tag": "ABX9TyOUyi1h8LrKuQgxMefGB3e2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,10 +50,9 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.colors import ListedColormap\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.model_selection import train_test_split, KFold\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, learning_curve\n",
         "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report"
       ],
       "execution_count": 0,
@@ -101,23 +100,45 @@
         "  else:\n",
         "    plt.savefig(saveName)\n",
         "\n",
-        "def evaluateClassifier(model, y_true, y_pred, probabilities, feature_importances):  \n",
+        "def plot_learning_curve(estimator, title, X, y, ylim=None, cv=None, n_jobs=None, train_sizes=np.linspace(.1, 1.0, 5)):\n",
+        "  plt.figure()\n",
+        "  plt.title(title)\n",
+        "  if ylim is not None:\n",
+        "    plt.ylim(*ylim)\n",
+        "  plt.xlabel(\"Training examples\")\n",
+        "  plt.ylabel(\"Score\")\n",
+        "  train_sizes, train_scores, test_scores = learning_curve(estimator, X, y, cv=cv, n_jobs=n_jobs, train_sizes=train_sizes)\n",
+        "  train_scores_mean = np.mean(train_scores, axis=1)\n",
+        "  train_scores_std = np.std(train_scores, axis=1)\n",
+        "  test_scores_mean = np.mean(test_scores, axis=1)\n",
+        "  test_scores_std = np.std(test_scores, axis=1)\n",
+        "  plt.grid()\n",
+        "\n",
+        "  plt.fill_between(train_sizes, train_scores_mean - train_scores_std, train_scores_mean + train_scores_std, alpha=0.1, color=\"r\")\n",
+        "  plt.fill_between(train_sizes, test_scores_mean - test_scores_std, test_scores_mean + test_scores_std, alpha=0.1, color=\"g\")\n",
+        "  plt.plot(train_sizes, train_scores_mean, 'o-', color=\"r\", label=\"Training score\")\n",
+        "  plt.plot(train_sizes, test_scores_mean, 'o-', color=\"g\", label=\"Cross-validation score\")\n",
+        "  plt.legend(loc=\"best\")\n",
+        "  \n",
+        "  return plt\n",
+        "\n",
+        "def evaluateClassifier(classifier, y_true, y_pred, probabilities, feature_importances):  \n",
         "  score_acc = accuracy_score(y_true,y_pred)\n",
-        "  print(\"\\nAccuracy Score of {}: {}\".format(model, score_acc))\n",
+        "  print(\"\\nAccuracy Score of {}: {}\".format(classifier, score_acc))\n",
         "\n",
         "  classificationReport = classification_report(y_true,y_pred)\n",
-        "  print(\"\\nClassification Report of {}: {}\".format(model, classificationReport))\n",
+        "  print(\"\\nClassification Report of {}: {}\".format(classifier, classificationReport))\n",
         "\n",
         "  score_cohenKappa = cohen_kappa_score(y_true, y_pred)\n",
-        "  print(\"\\nCohen Kappa Score of {}: {}\".format(model, score_cohenKappa))\n",
+        "  print(\"\\nCohen Kappa Score of {}: {}\".format(classifier, score_cohenKappa))\n",
         "\n",
         "  score_mse = mean_squared_error(y_true, y_pred)\n",
-        "  print(\"\\nMean Squared Error Score of {}: {}\".format(model, score_mse))\n",
+        "  print(\"\\nMean Squared Error Score of {}: {}\".format(classifier, score_mse))\n",
         "\n",
         "  plt.figure(figsize=(13,10))\n",
         "  plt.subplot(221)\n",
         "  sb.heatmap(confusion_matrix(y_true,y_pred),annot=True,fmt = \"d\",linecolor=\"k\",linewidths=3)\n",
-        "  plt.title(\"Confusion Matrix of {}\".format(model),fontsize=20)\n",
+        "  plt.title(\"Confusion Matrix of {}\".format(classifier),fontsize=20)\n",
         "  plt.show()\n",
         "\n",
         "  false_positive_rate, true_positive_rate, thresholds = roc_curve(y_true, probabilities)\n",
@@ -151,7 +172,10 @@
         "\n",
         "  featureImportances = pd.Series(gs.feature_importances_, index=dataset.columns[:-1]).sort_values(ascending=False)\n",
         "\n",
-        "  evaluateClassifier(classifier, yTest, y_pred, probs, featureImportances)\n",
+        "  evaluateClassifier(classifier, gs, yTest, y_pred, probs, featureImportances)\n",
+        "\n",
+        "  plt.subplot(224)\n",
+        "  plot_learning_curve(gs, \"Learning Curve\", xTrain, yTrain)\n",
         "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
         "  X = dataset[dataset.columns[list_dataColumns]]\n",
