--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOUyi1h8LrKuQgxMefGB3e2",
+      "authorship_tag": "ABX9TyOukaAdeYwnmpHg+1fBSfl4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, learning_curve\n",
-        "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report"
+        "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report, precision_recall_curve"
       ],
       "execution_count": 0,
       "outputs": []
@@ -100,6 +100,15 @@
         "  else:\n",
         "    plt.savefig(saveName)\n",
         "\n",
+        "def plot_prec_recall_vs_thresh(precisions, recalls, thresholds):\n",
+        "  plt.plot(thresholds, precisions[:-1], 'b--', label='Precision')\n",
+        "  plt.plot(thresholds, recalls[:-1], 'g--', label = 'Recall')\n",
+        "  plt.xlabel('Threshold')\n",
+        "  plt.legend(loc='upper left')\n",
+        "  plt.ylim([0,1])\n",
+        "  plt.legend()\n",
+        "  plt.show()\n",
+        "\n",
         "def plot_learning_curve(estimator, title, X, y, ylim=None, cv=None, n_jobs=None, train_sizes=np.linspace(.1, 1.0, 5)):\n",
         "  plt.figure()\n",
         "  plt.title(title)\n",
@@ -122,7 +131,7 @@
         "  \n",
         "  return plt\n",
         "\n",
-        "def evaluateClassifier(classifier, y_true, y_pred, probabilities, feature_importances):  \n",
+        "def evaluateClassifier(classifier, y_true, y_pred, probabilities, feature_importances, df_stats):  \n",
         "  score_acc = accuracy_score(y_true,y_pred)\n",
         "  print(\"\\nAccuracy Score of {}: {}\".format(classifier, score_acc))\n",
         "\n",
@@ -151,7 +160,10 @@
         "  plt.xlabel('Score')\n",
         "  plt.show()\n",
         "\n",
-        "def executeClassifier(classifier, xTrain, yTrain, xTest, yTest, n_fold, paramSet):\n",
+        "  df_stats.append({\"Model\":classifier, \"Accuracy\":score_acc, \"MSE\":score_mse, \"Cohen Kappa Score\":score_cohenKappa}, ignore_index=True)\n",
+        "  return df_stats\n",
+        "\n",
+        "def executeClassifier(classifier, xTrain, yTrain, xTest, yTest, n_fold, paramSet, df_stats):\n",
         "  gs = GridSearchCV(\n",
         "                    estimator = classifier,\n",
         "                    param_grid = paramSet,\n",
@@ -172,10 +184,13 @@
         "\n",
         "  featureImportances = pd.Series(gs.feature_importances_, index=dataset.columns[:-1]).sort_values(ascending=False)\n",
         "\n",
-        "  evaluateClassifier(classifier, gs, yTest, y_pred, probs, featureImportances)\n",
+        "  evaluateClassifier(classifier, yTest, y_pred, probs, featureImportances, df_stats)\n",
         "\n",
         "  plt.subplot(224)\n",
-        "  plot_learning_curve(gs, \"Learning Curve\", xTrain, yTrain)\n",
+        "  plot_learning_curve(gs, \"Learning Curve\", xTrain, yTrain, cv=n_fold, n_jobs=-1)\n",
+        "\n",
+        "  precisions, recalls, thresholds = precision_recall_curve(yTrain, y_pred)\n",
+        "  plot_prec_recall_vs_thresh(precisions, recalls, thresholds)\n",
         "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
         "  X = dataset[dataset.columns[list_dataColumns]]\n",
@@ -303,7 +318,9 @@
         "colab": {}
       },
       "source": [
-        "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.3)\n"
+        "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.3)\n",
+        "\n",
+        "statsFrame = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score'])\n"
       ],
       "execution_count": 0,
       "outputs": []
