--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCpAnr4WHuP8Qqu2uhy1qZ",
+      "authorship_tag": "ABX9TyPKzjoIIs0N+L7+eIqRVc8H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,14 +49,15 @@
         "import seaborn as sb\n",
         "import matplotlib.pyplot as plt\n",
         "from imblearn.over_sampling import SMOTE\n",
-        "from matplotlib.colors import ListedColormap\n",
+        "from xgboost import XGBClassifier\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier, ExtraTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, learning_curve\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, learning_curve\n",
         "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report, precision_recall_curve, roc_curve, roc_auc_score"
       ],
       "execution_count": 0,
@@ -168,40 +169,6 @@
         "  df_stats = df_stats.append({\"Model\":classifier, \"Accuracy\":score_acc, \"MSE\":score_mse, \"Cohen Kappa Score\":score_cohenKappa}, ignore_index=True)\n",
         "  return df_stats\n",
         "\n",
-        "def executeClassifier(classifier, xTrain, yTrain, xTest, yTest, n_fold, paramSet, df_stats):\n",
-        "  gs = GridSearchCV(\n",
-        "                    estimator = classifier,\n",
-        "                    param_grid = paramSet,\n",
-        "                    cv = n_fold,      \n",
-        "                    n_jobs = -1\n",
-        "                   ) \n",
-        "  gs.fit(xTrain, yTrain)\n",
-        "\n",
-        "  print(\"\\n{} Best Score: {}\".format(classifier, gs.best_score_))\n",
-        "  print(\"\\n{} Best Parameters Set:\\n\".format(classifier))\n",
-        "  for param in sorted(paramSet.keys()):\n",
-        "    print(\"Parameter {}: {}\".format(param, gs.best_estimator_.get_params()[param]))\n",
-        "\n",
-        "  y_pred = gs.predict(xTest)\n",
-        "\n",
-        "  #Predict probabilities for the test data and Keep Probabilities of the positive class only.\n",
-        "  probs = gs.predict_proba(xTest)[:, 1]\n",
-        "\n",
-        "  if classifier in [RandomForestClassifier(), DecisionTreeClassifier()]:\n",
-        "    featureImportances = pd.Series(gs.feature_importances_, index=dataset.columns[:-1]).sort_values(ascending=False)\n",
-        "    df_stats = evaluateClassifier(classifier, yTest, y_pred, probs, df_stats, featureImportances)\n",
-        "    plt.subplot(224)\n",
-        "    plot_learning_curve(gs, \"Learning Curve\", xTrain, yTrain, cv=n_fold, n_jobs=-1)\n",
-        "  else:\n",
-        "    df_stats = evaluateClassifier(classifier, yTest, y_pred, probs, df_stats, feature_importances=None)\n",
-        "    plt.subplot(223)\n",
-        "    plot_learning_curve(gs, \"Learning Curve\", xTrain, yTrain, cv=n_fold, n_jobs=-1)\n",
-        "\n",
-        "  precisions, recalls, thresholds = precision_recall_curve(yTrain, y_pred)\n",
-        "  plot_prec_recall_vs_thresh(precisions, recalls, thresholds)\n",
-        "\n",
-        "  return df_stats\n",
-        "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
         "  X = dataset[dataset.columns[list_dataColumns]]\n",
         "  y = dataset[dataset.columns[targetColumn]]\n",
@@ -246,7 +213,7 @@
         "colab": {}
       },
       "source": [
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/bahadirbasaran/pulsarDetection/master/pulsar_stars.csv?token=ALRHARQGXXVEDODHOBFNBA26NFP5O')"
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/bahadirbasaran/pulsarDetection/master/pulsar_stars.csv?token=ALRHARTCRN3BKITUTFZJQAK6NIEEA')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -266,11 +233,11 @@
       "metadata": {
         "id": "9yBdhGhI6O0X",
         "colab_type": "code",
+        "outputId": "3c8a3021-c719-468b-abe6-878340d4ae9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3c8a3021-c719-468b-abe6-878340d4ae9e"
+        }
       },
       "source": [
         "dataset.info()\n",
@@ -311,7 +278,7 @@
         "# Joint Plot\n",
         "sb.jointplot(x=dataset.columns[0], y=dataset.columns[1], data=dataset, kind='kde', height=12)\n"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,18 +399,16 @@
       "metadata": {
         "id": "SoSYGdl37N42",
         "colab_type": "code",
+        "outputId": "d20d2da5-ca1f-4143-af51-ad86aed1a68e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        },
-        "outputId": "d20d2da5-ca1f-4143-af51-ad86aed1a68e"
+        }
       },
       "source": [
-        "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.3)\n",
-        "\n",
-        "statsFrame = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score'])\n"
+        "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.3)\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +439,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Logistic Regression**"
+        "**Model Execution&Evaluation**"
       ]
     },
     {
@@ -487,8 +452,71 @@
       "source": [
         "params_LR = {\"penalty\": ['l1', 'l2'],\n",
         "             'C': [0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
+        "params_kNN = {\"n_neighbors\":[3, 5, 7, 9, 11, 13],\n",
+        "              \"weights\": ['uniform', 'distance']}\n",
+        "params_SVM = {}\n",
+        "params_DT = {}\n",
+        "params_RF = {}\n",
+        "params_AB = {}\n",
+        "params_GB = {}\n",
+        "params_XGB = {}\n",
+        "params_ET = {}\n",
         "\n",
-        "statsFrame = executeClassifier(LogisticRegression(), X_train, y_train, X_test, y_test, 10, params_LR, statsFrame)"
+        "list_paramSets = [params_LR, params_kNN, params_SVM, params_DT, params_RF, params_AB, params_GB, params_XGB, params_ET]\n",
+        "\n",
+        "list_classifiers = [LogisticRegression(), KNeighborsClassifier(), SVC(), DecisionTreeClassifier(), RandomForestClassifier(),\n",
+        "                    AdaBoostClassifier(), GradientBoostingClassifier(), XGBClassifier(), ExtraTreeClassifier()]\n",
+        "\n",
+        "list_clfNames = [\"Logistic Regression\", \"k-Nearest Neighbors\", \"Support Vector Machines\", \"Decision Tree\",\n",
+        "                 \"Random Forest\", \"AdaBoost\", \"Gradient Boosting\", \"XGBoost\", \"Extra Tree\"]\n",
+        "\n",
+        "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score'])\n",
+        "\n",
+        "for classifier, paramSet, classifierName in zip(list_classifiers, list_paramSets, list_clfNames):\n",
+        "  gs = GridSearchCV(\n",
+        "                    estimator = classifier,\n",
+        "                    param_grid = paramSet,\n",
+        "                    cv = 10,      \n",
+        "                    n_jobs = -1\n",
+        "                   )\n",
+        "  gs.fit(X_train, y_train)\n",
+        " \n",
+        "  print(\"\\n{} Best Score: {}\".format(classifier, gs.best_score_))\n",
+        "  print(\"\\n{} Best Parameters Set:\\n\".format(classifier))\n",
+        "  for param in sorted(paramSet.keys()):\n",
+        "    print(\"Parameter {}: {}\".format(param, gs.best_estimator_.get_params()[param]))\n",
+        "\n",
+        "  y_pred = gs.predict(X_test)\n",
+        "\n",
+        "  #Predict probabilities for the test data and Keep Probabilities of the positive class only.\n",
+        "  probs = gs.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "  if classifier in [RandomForestClassifier(), DecisionTreeClassifier(), AdaBoostClassifier(), GradientBoostingClassifier(), ExtraTreesClassifier()]:\n",
+        "    featureImportances = pd.Series(gs.feature_importances_, index=dataset.columns[:-1]).sort_values(ascending=False)\n",
+        "    dataframe_stats = evaluateClassifier(classifierName, y_test, y_pred, probs, dataframe_stats, featureImportances)\n",
+        "    plt.subplot(224)\n",
+        "    plot_learning_curve(gs, \"Learning Curve\", X_train, y_train, cv=10, n_jobs=-1)\n",
+        "  else:\n",
+        "    dataframe_stats = evaluateClassifier(classifierName, y_test, y_pred, probs, dataframe_stats, feature_importances=None)\n",
+        "    plt.subplot(223)\n",
+        "    plot_learning_curve(gs, \"Learning Curve\", X_train, y_train, cv=10, n_jobs=-1)\n",
+        "\n",
+        "  precisions, recalls, thresholds = precision_recall_curve(y_train, y_pred)\n",
+        "  plot_prec_recall_vs_thresh(precisions, recalls, thresholds)\n",
+        "\n",
+        "# We cannot use Naive Bayes Classifier with gridsearchcv\n",
+        "clf_nb = GaussianNB()\n",
+        "clf_nb.fit(x_train,y_train)\n",
+        "\n",
+        "y_pred = clf_nb.predict(x_test)\n",
+        "probs = clf_nb.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "dataframe_stats = evaluateClassifier(\"Naive Bayes\", y_test, y_pred, probs, dataframe_stats, feature_importances=None)\n",
+        "plt.subplot(223)\n",
+        "plot_learning_curve(clf_nb, \"Learning Curve\", X_train, y_train, n_jobs=-1)\n",
+        "\n",
+        "precisions, recalls, thresholds = precision_recall_curve(y_train, y_pred)\n",
+        "plot_prec_recall_vs_thresh(precisions, recalls, thresholds)"
       ],
       "execution_count": 0,
       "outputs": []
