--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKzjoIIs0N+L7+eIqRVc8H",
+      "authorship_tag": "ABX9TyOsaoOZ6JRwj/lVdoEgSi6c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "import copy\n",
+        "from copy import deepcopy\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sb\n",
@@ -450,17 +450,16 @@
         "colab": {}
       },
       "source": [
-        "params_LR = {\"penalty\": ['l1', 'l2'],\n",
-        "             'C': [0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
-        "params_kNN = {\"n_neighbors\":[3, 5, 7, 9, 11, 13],\n",
-        "              \"weights\": ['uniform', 'distance']}\n",
-        "params_SVM = {}\n",
-        "params_DT = {}\n",
-        "params_RF = {}\n",
-        "params_AB = {}\n",
-        "params_GB = {}\n",
-        "params_XGB = {}\n",
-        "params_ET = {}\n",
+        "params_LR =   {\"penalty\": ['l1', 'l2'], 'C': [0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
+        "params_kNN =  {\"n_neighbors\": [3, 5, 7, 9, 11, 13], \"weights\": ['uniform', 'distance']}\n",
+        "params_SVM =  [{'C': [0.1, 1, 10, 100, 1000], 'kernel': ['linear']},\n",
+        "               {'C': [0.1, 1, 10, 100, 1000], 'gamma': [1.0/50.0, 1.0/200.0, 1.0/500.0, 1.0/1000.0], 'kernel': ['rbf', 'poly', 'sigmoid']}]\n",
+        "params_DT =   {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": list(range(2,30,1)), \"min_samples_leaf\": list(range(5,20,1))}\n",
+        "params_RF =   {\"bootstrap\":[True, False], \"max_depth\": list(range(2,10,1)), \"min_samples_leaf\": list(range(5,20,1))}\n",
+        "params_AB =   {}\n",
+        "params_GB =   {}\n",
+        "params_XGB =  {}\n",
+        "params_ET =   {}\n",
         "\n",
         "list_paramSets = [params_LR, params_kNN, params_SVM, params_DT, params_RF, params_AB, params_GB, params_XGB, params_ET]\n",
         "\n",
@@ -480,6 +479,9 @@
         "                    n_jobs = -1\n",
         "                   )\n",
         "  gs.fit(X_train, y_train)\n",
+        "\n",
+        "  if classifier == DecisionTreeClassifier():\n",
+        "    clf_decisionTree = deepcopy(gs.best_estimator_)\n",
         " \n",
         "  print(\"\\n{} Best Score: {}\".format(classifier, gs.best_score_))\n",
         "  print(\"\\n{} Best Parameters Set:\\n\".format(classifier))\n",
