--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOsaoOZ6JRwj/lVdoEgSi6c",
+      "authorship_tag": "ABX9TyN/CWLD+ZLKiyHJpGsIGy2r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,6 @@
         "colab": {}
       },
       "source": [
-        "from copy import deepcopy\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sb\n",
@@ -454,10 +453,10 @@
         "params_kNN =  {\"n_neighbors\": [3, 5, 7, 9, 11, 13], \"weights\": ['uniform', 'distance']}\n",
         "params_SVM =  [{'C': [0.1, 1, 10, 100, 1000], 'kernel': ['linear']},\n",
         "               {'C': [0.1, 1, 10, 100, 1000], 'gamma': [1.0/50.0, 1.0/200.0, 1.0/500.0, 1.0/1000.0], 'kernel': ['rbf', 'poly', 'sigmoid']}]\n",
-        "params_DT =   {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": list(range(2,30,1)), \"min_samples_leaf\": list(range(5,20,1))}\n",
-        "params_RF =   {\"bootstrap\":[True, False], \"max_depth\": list(range(2,10,1)), \"min_samples_leaf\": list(range(5,20,1))}\n",
-        "params_AB =   {}\n",
-        "params_GB =   {}\n",
+        "params_DT =   {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, None], \"min_samples_leaf\": list(range(1,10,1))}\n",
+        "params_RF =   {\"n_estimators\": [250, 500], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, None], \"min_samples_leaf\": list(range(1,10,1))}\n",
+        "params_AB =   {\"n_estimators\": [250, 500]}\n",
+        "params_GB =   {\"n_estimators\": [250, 500], \"loss\": ['deviance', 'exponential'], \"max_depth\": [3, 4, 5, 6, 7, 8, 9, 10], \"min_samples_leaf\": list(range(1,10,1))}\n",
         "params_XGB =  {}\n",
         "params_ET =   {}\n",
         "\n",
@@ -480,8 +479,9 @@
         "                   )\n",
         "  gs.fit(X_train, y_train)\n",
         "\n",
+        "  #Best estimator the result of DecisionTreeClassifier will be used in Adaboost\n",
         "  if classifier == DecisionTreeClassifier():\n",
-        "    clf_decisionTree = deepcopy(gs.best_estimator_)\n",
+        "    params_AB.update({\"base_estimator\": gs.best_estimator_})\n",
         " \n",
         "  print(\"\\n{} Best Score: {}\".format(classifier, gs.best_score_))\n",
         "  print(\"\\n{} Best Parameters Set:\\n\".format(classifier))\n",
